# audio_event_detection

./: .gitignore  main.py  pyproject.toml
src/audio_event_detection/: aed.py  classes.py  features.py  filter.py  load.py  rms.py
src/audio_event_detection/audio/: filter.py
src/audio_event_detection/detection/: detect.py  median_based_alg.py  rolling_median.py
src/audio_event_detection/features/: features.py  maxp.py  par.py  rms.py  stft.py
src/audio_event_detection/merging/: merge.py
src/audio_event_detection/plotting/: plot.py  plot_utils.py
